[package]
name = "neckcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
fon = "0.6.0"
image = "0.24.8"
imageproc = "0.23.0"
rodio = "0.19.0"
rustface = "0.1.7"
thiserror = "1.0.56"

[dependencies.nokhwa]
version = "0.10.4"
features = ["input-native", "output-threaded"]

